...
      <Header>
        <Text></Text>
      </Header>
      <Icon onPress={() => navigation.navigate('Initial')}>
        <AntDesign name="arrowleft" size={20} color="#000" />
      </Icon>
      <Main testID="MainView">
        <KeyboardAvoidingView
          behavior={Platform.OS === 'ios' ? 'padding' : 'height'}
        >
          <Form ref={formRef} onSubmit={handleLogin}>
            <Input
              name="email"
...
              Entrar
            </Button>
          </Form>
          <Footer>
            <Register
              onPress={() => navigation.navigate('Signup')}
              testID="button-createAccount"
            >
              <Text>Crie sua conta</Text>
            </Register>
          </Footer>
        </KeyboardAvoidingView>

...
